--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,68 +19,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-footer{
-background:#0e0e0e;
-color:#ffffff;
+.nav-item{
+padding-left:8.2px;
+padding-right:7.8px;
+padding-top:5px;
+padding-bottom:4.9px;
 }
-.d5d42670473761abbb70e2740532335cd:hover{
-box-shadow: 0 50px 50.4px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.cfd70ddb0bdef34735406b2398e2a19a3 a,.a898a042b9cf3630f9c0287b20542eee3 a{
+color:#050505!important;
+text-decoration: underline !important;
 }
 .nav-link{
 color: #000000!important;
 
 }
-.btn-md{
-padding: 14.7px 29.9px;
-border-radius: 0;
-}
-.a00d662bc0f64c5e802e181047a5b7faa{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.navbar a{
-font-size: 17.5px!important;
-font-weight: bold;
-}
-ul{
-list-style: circle;
-}
-footer *{
-font-size:16px !important;
-}
-.w2b1d0407fc6ea3305f592db7b9858c29 p,.w2b1d0407fc6ea3305f592db7b9858c29 span,.w2b1d0407fc6ea3305f592db7b9858c29 label{
+.a898a042b9cf3630f9c0287b20542eee3 p,.a898a042b9cf3630f9c0287b20542eee3 span,.a898a042b9cf3630f9c0287b20542eee3 label{
 font-size:16px!important;
-}
-.xa5333b27c7c365daa25adacac6401473 a,.w2b1d0407fc6ea3305f592db7b9858c29 a{
-color:#090909!important;
-text-decoration: underline !important;
-}
-html{
-scroll-behavior: smooth;
 }
 a{
 text-decoration: none!important;
 }
-.w2b1d0407fc6ea3305f592db7b9858c29 a{
-font-size:16px;
+.ee699ef644b66b40e8fde82a4fda2dd21:hover{
+box-shadow: 0 49.7px 50.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
-.nav-item{
-padding-left:8.4px;
-padding-right:7.6px;
-padding-top:4.5px;
-padding-bottom:5.1px;
+html{
+scroll-behavior: smooth;
+}
+ul{
+list-style: circle;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.z4e4098c216f52130a4430465a62c2133{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+footer{
+background:#0b0b0b;
+color:#ffffff;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.xa5333b27c7c365daa25adacac6401473 p,.xa5333b27c7c365daa25adacac6401473 a,.xa5333b27c7c365daa25adacac6401473 span,.xa5333b27c7c365daa25adacac6401473 label{
+.a898a042b9cf3630f9c0287b20542eee3 a{
+font-size:16px;
+}
+.btn-md{
+padding: 15.1px 29.9px;
+border-radius: 0;
+}
+footer *{
+font-size:16px !important;
+}
+.cfd70ddb0bdef34735406b2398e2a19a3 p,.cfd70ddb0bdef34735406b2398e2a19a3 a,.cfd70ddb0bdef34735406b2398e2a19a3 span,.cfd70ddb0bdef34735406b2398e2a19a3 label{
 font-size:16px!important;
+}
+.navbar a{
+font-size: 18.3px!important;
+font-weight: bold;
 }
 </style>
 </head>
@@ -90,23 +90,23 @@ font-size:16px!important;
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
 <ul class="ml-auto align-items-center navbar-nav d-flex"><li class="nav-item">
-<a class="nav-link t727728c934c1d023b24d17dde180899d" href="index.html" >plumbing quotes</a>
+<a class="nav-link y7f335f0e7ec0f952f9be1250b4a20c29" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="t727728c934c1d023b24d17dde180899d nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link y7f335f0e7ec0f952f9be1250b4a20c29" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link t727728c934c1d023b24d17dde180899d" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="y7f335f0e7ec0f952f9be1250b4a20c29 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="t727728c934c1d023b24d17dde180899d nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="y7f335f0e7ec0f952f9be1250b4a20c29 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle t727728c934c1d023b24d17dde180899d" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="nav-link y7f335f0e7ec0f952f9be1250b4a20c29 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="t727728c934c1d023b24d17dde180899d nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link y7f335f0e7ec0f952f9be1250b4a20c29" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="container pt-5 py-4" >
+<div class="py-4 container pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="t727728c934c1d023b24d17dde180899d" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="t727728c934c1d023b24d17dde180899d" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="t727728c934c1d023b24d17dde180899d" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="t727728c934c1d023b24d17dde180899d" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="y7f335f0e7ec0f952f9be1250b4a20c29" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="y7f335f0e7ec0f952f9be1250b4a20c29" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="y7f335f0e7ec0f952f9be1250b4a20c29" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="y7f335f0e7ec0f952f9be1250b4a20c29" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook ca134fa1e4f1c32e44f216e5c8d80e4e3" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="ca134fa1e4f1c32e44f216e5c8d80e4e3 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google ca134fa1e4f1c32e44f216e5c8d80e4e3-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter ca134fa1e4f1c32e44f216e5c8d80e4e3" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="daf3973acdd375a6e580620e9619297da facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="daf3973acdd375a6e580620e9619297da pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google daf3973acdd375a6e580620e9619297da-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter daf3973acdd375a6e580620e9619297da" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
