--- a/about-us.html
+++ b/about-us.html
@@ -18,101 +18,101 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.abb3890f4cef170d4e314cfa2c85092db p,.abb3890f4cef170d4e314cfa2c85092db span,.abb3890f4cef170d4e314cfa2c85092db label{
-font-size:16px!important;
-}
-.z3f762e219424ba8e6b24528c5e94bc38:hover{
-box-shadow: 0 50px 50.3px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.w408baafe2ef9e2aebc8dd3d980cf7a67 a,.abb3890f4cef170d4e314cfa2c85092db a{
-color:#0a0a0a!important;
-text-decoration: underline !important;
-}
-.u790c37abee5ab9bb661da4b48a51b636{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.x604fc5cb2683af3e112d422c50324c40{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
 ul{
 list-style: circle;
 }
-.w158c12514b7180294083df546ad9b777{
-border: 1px solid #68859336;
-border-radius: 5px;
-padding: 20px 20px;
-background: #fcfaf6;
-}
-.abb3890f4cef170d4e314cfa2c85092db a{
-font-size:16px;
-}
-.w408baafe2ef9e2aebc8dd3d980cf7a67 p,.w408baafe2ef9e2aebc8dd3d980cf7a67 a,.w408baafe2ef9e2aebc8dd3d980cf7a67 span,.w408baafe2ef9e2aebc8dd3d980cf7a67 label{
-font-size:16px!important;
-}
-.btn-md{
-padding: 15.4px 29.7px;
-border-radius: 0;
-}
-footer{
-background:#121212;
-color:#ffffff;
-}
-.nav-item{
-padding-left:8.3px;
-padding-right:8.5px;
-padding-top:4.8px;
-padding-bottom:4.7px;
-}
-footer *{
-font-size:16px !important;
-}
-a{
-text-decoration: none!important;
+.navbar a{
+font-size: 17.7px!important;
+font-weight: bold;
 }
 .nav-link{
 color: #000000!important;
 
 }
+footer *{
+font-size:16px !important;
+}
+.f41609eeef2efb244de61e3a4d00302d7 a{
+font-size:16px;
+}
+.nav-item{
+padding-left:8px;
+padding-right:8.1px;
+padding-top:4.6px;
+padding-bottom:5.2px;
+}
 html{
 scroll-behavior: smooth;
 }
-.navbar a{
-font-size: 17.8px!important;
-font-weight: bold;
+.x34d4fd01e9cc9dcf141b3a34d5c32164 p,.x34d4fd01e9cc9dcf141b3a34d5c32164 a,.x34d4fd01e9cc9dcf141b3a34d5c32164 span,.x34d4fd01e9cc9dcf141b3a34d5c32164 label{
+font-size:16px!important;
+}
+footer{
+background:#141414;
+color:#ffffff;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.b8e02888b773ccf0c103e1db769b121a8:hover{
+box-shadow: 0 49.9px 49.9px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.w913edcda87f2387453f6c1d846de97ae{
+border: 1px solid #67849235;
+border-radius: 5px;
+padding: 20px 20px;
+background: #f4f2ee;
+}
+.f41609eeef2efb244de61e3a4d00302d7 p,.f41609eeef2efb244de61e3a4d00302d7 span,.f41609eeef2efb244de61e3a4d00302d7 label{
+font-size:16px!important;
+}
+.btn-md{
+padding: 14.8px 29.9px;
+border-radius: 0;
+}
+a{
+text-decoration: none!important;
+}
+.x34d4fd01e9cc9dcf141b3a34d5c32164 a,.f41609eeef2efb244de61e3a4d00302d7 a{
+color:#080808!important;
+text-decoration: underline !important;
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="ml-auto navbar-nav align-items-center d-flex"><li class="nav-item">
-<a class="z581546afb6a812bdb9f0ec40967be740 nav-link" href="index.html" >plumbing quotes</a>
+<ul class="align-items-center navbar-nav d-flex ml-auto"><li class="nav-item">
+<a class="u3987280944e2e470a5c5e985f913c046 nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z581546afb6a812bdb9f0ec40967be740" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="u3987280944e2e470a5c5e985f913c046 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z581546afb6a812bdb9f0ec40967be740" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="u3987280944e2e470a5c5e985f913c046 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="z581546afb6a812bdb9f0ec40967be740 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="u3987280944e2e470a5c5e985f913c046 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="nav-link z581546afb6a812bdb9f0ec40967be740 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<a class="u3987280944e2e470a5c5e985f913c046 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link z581546afb6a812bdb9f0ec40967be740" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link u3987280944e2e470a5c5e985f913c046" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ font-weight: bold;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 w158c12514b7180294083df546ad9b777">
+<div class="col-md-12 mb-3 w913edcda87f2387453f6c1d846de97ae">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="pt-5 py-4 container" >
+<div class="container pt-5 py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="z581546afb6a812bdb9f0ec40967be740" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="z581546afb6a812bdb9f0ec40967be740" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="z581546afb6a812bdb9f0ec40967be740" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="z581546afb6a812bdb9f0ec40967be740" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="u3987280944e2e470a5c5e985f913c046" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="u3987280944e2e470a5c5e985f913c046" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="u3987280944e2e470a5c5e985f913c046" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="u3987280944e2e470a5c5e985f913c046" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook fe587b9ed67766df867bb1531728d2f8b" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest fe587b9ed67766df867bb1531728d2f8b" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google fe587b9ed67766df867bb1531728d2f8b-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="fe587b9ed67766df867bb1531728d2f8b twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook t212caf08e473c22f946968063bdc9119" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="t212caf08e473c22f946968063bdc9119 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="t212caf08e473c22f946968063bdc9119 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="t212caf08e473c22f946968063bdc9119 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
