--- a/about-us.html
+++ b/about-us.html
@@ -18,16 +18,32 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.xa57d708091f7ff28624574a8ae621008:hover{
-box-shadow: 0 50.2px 50.3px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.t14279a80926483f05f7485f416ff6b09 a,.c6d2f5931f0d62b7103a22ee2813b82dc a{
+color:#0f0f0f!important;
+text-decoration: underline !important;
 }
-.nav-link{
-color: #000000!important;
-
+.z4f5add469d738be80fdacf644f5e3bf4:hover{
+box-shadow: 0 49.5px 49.9px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 html{
 scroll-behavior: smooth;
+}
+.ye0e59bf006f935c0124e8833bdff5119{
+border: 1px solid #627f8d30;
+border-radius: 5px;
+padding: 20px 20px;
+background: #f4f2ee;
+}
+footer{
+background:#070707;
+color:#ffffff;
+}
+.c6d2f5931f0d62b7103a22ee2813b82dc p,.c6d2f5931f0d62b7103a22ee2813b82dc span,.c6d2f5931f0d62b7103a22ee2813b82dc label{
+font-size:16px!important;
+}
+.t14279a80926483f05f7485f416ff6b09 p,.t14279a80926483f05f7485f416ff6b09 a,.t14279a80926483f05f7485f416ff6b09 span,.t14279a80926483f05f7485f416ff6b09 label{
+font-size:16px!important;
 }
 *{
 font-family: 'Kumbh Sans', sans-serif;
@@ -35,84 +51,68 @@ font-family: 'Kumbh Sans', sans-serif;
 ul{
 list-style: circle;
 }
-footer{
-background:#101010;
-color:#ffffff;
-}
-.btn-md{
-padding: 14.7px 30px;
-border-radius: 0;
-}
-.nav-item{
-padding-left:8.3px;
-padding-right:8.3px;
-padding-top:5.4px;
-padding-bottom:4.9px;
-}
 a{
 text-decoration: none!important;
 }
-.z87d148a31ef7295d8eedea0f975ac59e{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
+.nav-link{
+color: #000000!important;
+
 }
-.navbar a{
-font-size: 17.9px!important;
-font-weight: bold;
+footer *{
+font-size:16px !important;
+}
+.nav-item{
+padding-left:8.1px;
+padding-right:7.6px;
+padding-top:5px;
+padding-bottom:4.6px;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.ybce0f83dccbdb15139f84c5140a23421 p,.ybce0f83dccbdb15139f84c5140a23421 a,.ybce0f83dccbdb15139f84c5140a23421 span,.ybce0f83dccbdb15139f84c5140a23421 label{
-font-size:16px!important;
+.navbar a{
+font-size: 17.5px!important;
+font-weight: bold;
 }
-.ybce0f83dccbdb15139f84c5140a23421 a,.u06fef1b087b11a80f653da15bac99c64 a{
-color:#050505!important;
-text-decoration: underline !important;
+.btn-md{
+padding: 15.1px 29.6px;
+border-radius: 0;
 }
-footer *{
-font-size:16px !important;
+.x156bbef49c806fdec023570c294d0b89{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
-.u06fef1b087b11a80f653da15bac99c64 a{
+.c6d2f5931f0d62b7103a22ee2813b82dc a{
 font-size:16px;
-}
-.w987dc39c4465cd1bcdb1f622328a7f13{
-border: 1px solid #66839134;
-border-radius: 5px;
-padding: 20px 20px;
-background: #f5f3ef;
-}
-.u06fef1b087b11a80f653da15bac99c64 p,.u06fef1b087b11a80f653da15bac99c64 span,.u06fef1b087b11a80f653da15bac99c64 label{
-font-size:16px!important;
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="align-items-center navbar-nav d-flex ml-auto"><li class="nav-item">
-<a class="nav-link v22b4d228e0485d06e31a13490ab72fd8" href="index.html" >plumbing quotes</a>
+<ul class="d-flex navbar-nav ml-auto align-items-center"><li class="nav-item">
+<a class="y6ff395f59cacb9a0578c95b28e0b6e6f nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link v22b4d228e0485d06e31a13490ab72fd8" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="y6ff395f59cacb9a0578c95b28e0b6e6f nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link v22b4d228e0485d06e31a13490ab72fd8" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="y6ff395f59cacb9a0578c95b28e0b6e6f nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="v22b4d228e0485d06e31a13490ab72fd8 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="nav-link y6ff395f59cacb9a0578c95b28e0b6e6f" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="v22b4d228e0485d06e31a13490ab72fd8 dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<a class="dropdown-toggle nav-link y6ff395f59cacb9a0578c95b28e0b6e6f" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link v22b4d228e0485d06e31a13490ab72fd8" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="y6ff395f59cacb9a0578c95b28e0b6e6f nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ font-size:16px!important;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 w987dc39c4465cd1bcdb1f622328a7f13">
+<div class="col-md-12 mb-3 ye0e59bf006f935c0124e8833bdff5119">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -160,19 +160,19 @@ plumber north london</iframe>
 <div class="py-4 container pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="v22b4d228e0485d06e31a13490ab72fd8" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="v22b4d228e0485d06e31a13490ab72fd8" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="v22b4d228e0485d06e31a13490ab72fd8" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="v22b4d228e0485d06e31a13490ab72fd8" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="y6ff395f59cacb9a0578c95b28e0b6e6f" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="y6ff395f59cacb9a0578c95b28e0b6e6f" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="y6ff395f59cacb9a0578c95b28e0b6e6f" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="y6ff395f59cacb9a0578c95b28e0b6e6f" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook af6e4e606a0350bd9316d0d51b94570fa" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="af6e4e606a0350bd9316d0d51b94570fa pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google af6e4e606a0350bd9316d0d51b94570fa-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter af6e4e606a0350bd9316d0d51b94570fa" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="v75156726dbc1b6001909e17840291b9d facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="v75156726dbc1b6001909e17840291b9d pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="v75156726dbc1b6001909e17840291b9d google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="v75156726dbc1b6001909e17840291b9d twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
