--- a/sitemap.html
+++ b/sitemap.html
@@ -18,68 +18,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-a{
-text-decoration: none!important;
-}
-footer *{
-font-size:16px !important;
-}
-.d2f8174d177fc3a30b4dc5ff70bd29789 a{
-font-size:16px;
-}
-.x0b3374ec61374a45a46f03e247c1c4f9 a,.d2f8174d177fc3a30b4dc5ff70bd29789 a{
-color:#121212!important;
-text-decoration: underline !important;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.bf6ec8534e0ab34c5cce37a043d3ed145{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-html{
-scroll-behavior: smooth;
-}
-footer{
-background:#000000;
-color:#ffffff;
-}
-.d2f8174d177fc3a30b4dc5ff70bd29789 p,.d2f8174d177fc3a30b4dc5ff70bd29789 span,.d2f8174d177fc3a30b4dc5ff70bd29789 label{
-font-size:16px!important;
-}
-ul{
-list-style: circle;
-}
-.navbar a{
-font-size: 17.6px!important;
-font-weight: bold;
-}
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.nav-item{
-padding-left:8.5px;
-padding-right:7.8px;
-padding-top:4.9px;
-padding-bottom:4.8px;
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
-.x0b3374ec61374a45a46f03e247c1c4f9 p,.x0b3374ec61374a45a46f03e247c1c4f9 a,.x0b3374ec61374a45a46f03e247c1c4f9 span,.x0b3374ec61374a45a46f03e247c1c4f9 label{
+html{
+scroll-behavior: smooth;
+}
+.zadb299105f31e663d52425b15b48d758 p,.zadb299105f31e663d52425b15b48d758 span,.zadb299105f31e663d52425b15b48d758 label{
 font-size:16px!important;
 }
-.y5b7c01819d56559901e89067fc9afc55:hover{
-box-shadow: 0 49.8px 49.5px -25px rgb(0 0 0 / 30%);
+.e6a37981c73b6a143868d0332c89be0f0:hover{
+box-shadow: 0 49.6px 50px -25px rgb(0 0 0 / 30%);
 transform: rotate(-2deg) scale(1.03);
+}
+.dbee798936bd638c0b03d22d2b15593f8 a,.zadb299105f31e663d52425b15b48d758 a{
+color:#070707!important;
+text-decoration: underline !important;
+}
+a{
+text-decoration: none!important;
 }
 .nav-link{
 color: #000000!important;
 
 }
+.navbar a{
+font-size: 18px!important;
+font-weight: bold;
+}
 .btn-md{
-padding: 15px 30.1px;
+padding: 15px 29.7px;
 border-radius: 0;
+}
+.zadb299105f31e663d52425b15b48d758 a{
+font-size:16px;
+}
+footer{
+background:#131313;
+color:#ffffff;
+}
+.nav-item{
+padding-left:8.4px;
+padding-right:8.4px;
+padding-top:4.9px;
+padding-bottom:4.9px;
+}
+ul{
+list-style: circle;
+}
+.d74daa63a2f16cfb5d5a5085c25fbaac6{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+footer *{
+font-size:16px !important;
+}
+.dbee798936bd638c0b03d22d2b15593f8 p,.dbee798936bd638c0b03d22d2b15593f8 a,.dbee798936bd638c0b03d22d2b15593f8 span,.dbee798936bd638c0b03d22d2b15593f8 label{
+font-size:16px!important;
 }
 </style>
 </head>
@@ -87,25 +87,25 @@ border-radius: 0;
 <nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="align-items-center ml-auto navbar-nav d-flex"><li class="nav-item">
-<a class="nav-link fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="ml-auto navbar-nav align-items-center d-flex"><li class="nav-item">
+<a class="dd8e918ffc061647149050849e113e98c nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="fe426a156acfe108dbf7572bec07eb5e9 nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="dd8e918ffc061647149050849e113e98c nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link dd8e918ffc061647149050849e113e98c" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="fe426a156acfe108dbf7572bec07eb5e9 nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="dd8e918ffc061647149050849e113e98c nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="dropdown-toggle fe426a156acfe108dbf7572bec07eb5e9 nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<li class="nav-item dropdown">
+<a class="dropdown-toggle dd8e918ffc061647149050849e113e98c nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link fe426a156acfe108dbf7572bec07eb5e9" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link dd8e918ffc061647149050849e113e98c" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -134,22 +134,22 @@ border-radius: 0;
 </div>
 </section>
 <footer>
-<div class="pt-5 py-4 container" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="fe426a156acfe108dbf7572bec07eb5e9" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="dd8e918ffc061647149050849e113e98c" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="dd8e918ffc061647149050849e113e98c" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="dd8e918ffc061647149050849e113e98c" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="dd8e918ffc061647149050849e113e98c" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook we3f287e33834045de45f46467e75ab50" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest we3f287e33834045de45f46467e75ab50" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google we3f287e33834045de45f46467e75ab50-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="we3f287e33834045de45f46467e75ab50 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook a591b750920773575c2bec365ac31a477" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="a591b750920773575c2bec365ac31a477 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google a591b750920773575c2bec365ac31a477-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter a591b750920773575c2bec365ac31a477" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
